<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_category">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/iv_category"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_category_name"
            android:layout_toRightOf="@+id/iv_category"
            android:layout_alignParentTop="true"
            android:textSize="15pt"
            android:text="@string/category_name1"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_edit_category"
            android:layout_toRightOf="@id/tv_category_name"
            android:src="@android:drawable/ic_menu_edit"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_category_description"
            android:layout_toRightOf="@+id/iv_category"
            android:layout_below="@+id/tv_category_name"
            android:textSize="10pt"
            android:text="@string/desc"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_category_number"
            android:layout_toRightOf="@+id/tv_category_description"
            android:layout_below="@+id/tv_category_name"
            android:layout_marginLeft="20dp"
            android:textSize="10pt"
            android:text="@string/number1"
            android:layout_toLeftOf="@id/bt_edit_category"
            android:layout_toStartOf="@id/bt_edit_category"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_delete_category"
            android:layout_toRightOf="@id/tv_category_number"
            android:layout_below="@id/bt_edit_category"
            android:src="@android:drawable/ic_menu_delete"
            />

    </RelativeLayout>

</android.support.v7.widget.CardView>